Fixed word wrapping on long posts

--- a/assets/css/homepage/post.css
+++ b/assets/css/homepage/post.css
@@ -54,6 +54,8 @@
 }
 
 .post__content {
+  word-wrap: break-word;
+  white-space: normal;
   font-size: 1rem;
   color: #2e2e2e;
   line-height: 1.4;
